# pouce

./: .dockerignore  .gitignore  Dockerfile  README.md  ball.py  main.py  presentation.typ  pyproject.toml  streamlit_app.py
.github/: copilot-instructions.md
